# klaverjas

./: CMakeLists.txt  Messages.sh  README.md
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
src/: CMakeLists.txt  aiplayer.cpp  aiplayer.h  aitest.cpp  aitest.h  card.cpp  card.h  cardimageprovider.cpp  cardimageprovider.h  cardset.cpp  cardset.h  game.cpp  game.h  gameengine.cpp  gameengine.h  humanplayer.cpp  humanplayer.h  klaverjas.cpp  klaverjas.h  klaverjasSettings.kcfg  klaverjasSettings.kcfgc  klaverjasViewBase.ui  klaverjasui.rc  klaverjasview.cpp  klaverjasview.h  klaverjaswindow.cpp  klaverjaswindow.h  main.cpp  org.example.klaverjas.appdata.xml  org.example.klaverjas.desktop  player.cpp  player.h  rules.cpp  rules.h  scores.h  team.cpp  team.h  trick.cpp  trick.h
src/ismc/: game.h  node.cpp  node.h  solver.cpp  solver.h
src/ismcts/: node.cpp  node.h  solver.cpp  solver.h
src/players/: aiplayer.cpp  aiplayer.h  baseplayer.h  humanplayer.cpp  humanplayer.h  player.cpp  player.h  randomplayer.cpp  randomplayer.h
src/qml/: BidDialog.qml  BidView.qml  CardImage.qml  CircleView.qml  KlaverjasView.qml  PlayerView.qml  ScoreBoard.qml  SuitLabel.qml  TrickView.qml  klaverjas.qrc  main.qml
